--- a/templates/templates/index.html
+++ b/templates/templates/index.html
@@ -50,10 +50,10 @@
           </div>
         </div>
         <div class="row" id="mars-hemispheres">
-          <div class="page-header">
-            <h2 class="text-center">Mars Hemispheres</h2>
-          <div class="col-md-3">
-            <div class="thumbnail">
+            <h2></h2>Mars Hemispheres</h2>
+          <div class="col-md-4">
+            <div class="media">
+              <div class="media-body">
               <img src="{{hemisphere.img_url | default('static/images/error.png', true)}}" alt="...">
               <div class="caption">
                 <h3>{{hemisphere.title}}</h3>
